--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
   <header>
     <img src="logo.png" alt="Cotton Bloom Logo">
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
+  <a href="#hero">Home</a>
+  <a href="#shop">Shop</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
   </header>
 
   <section class="hero">
