--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 </nav>
   </header>
 
-  <section class="hero">
+  <section id="hero" class="hero">
     <h1>Elegant Living, Made to Bloom</h1>
     <button>Shop Now</button>
   </section>
 
-  <section class="products">
+ <section id="shop" class="products">
     <div class="product">
       <h3>Hand-Blown Glass Cup</h3>
       <p>$29.99</p>
@@ -171,5 +171,14 @@
   <footer>
     <p>&copy; 2025 Cotton Bloom. All rights reserved.</p>
   </footer>
+  <section id="about">
+  <h2 style="text-align:center;">About Cotton Bloom</h2>
+  <p style="text-align:center; max-width: 600px; margin: 0 auto;">Cotton Bloom is your destination for beautifully crafted glass cups, designed with love, elegance, and everyday use in mind.</p>
+</section>
+
+<section id="contact" class="newsletter">
+  <h2>Contact Us</h2>
+  <p>Email: hello@cottonbloom.com</p>
+</section>
 </body>
 </html>
